--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -27,6 +27,7 @@ RUN set -eux; \
         make \
         openssl \
         openssl-dev \
+        pkgconfig \
         pcre-dev \
         yajl-dev \
         zlib-dev
@@ -46,7 +47,7 @@ RUN set -eux; \
     ./build.sh;\
     git submodule init; \
     git submodule update; \
-    ./configure --with-yajl --with-ssdeep --with-lmdb; \
+    ./configure --with-yajl --with-ssdeep --with-lmdb --with-geoip; \
     make install
 
 # We use master
