--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -118,6 +118,9 @@ ENV ACCESSLOG=/var/log/nginx/access.log \
     PROXY_TIMEOUT=60s \
     PROXY_SSL_CERT_KEY=/etc/nginx/conf/server.key \
     PROXY_SSL_CERT=/etc/nginx/conf/server.crt \
+    PROXY_SSL_CIPHERS="ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS" \
+    PROXY_SSL_PREFER_CIPHERS=on \
+    PROXY_SSL_PROTOCOLS="TLSv1 TLSv1.1 TLSv1.2" \
     PROXY_SSL_VERIFY=off \
     SERVER_NAME=localhost \
     SSL_PORT=443 \
