--- a/v3-nginx/conf.d/default.conf
+++ b/v3-nginx/conf.d/default.conf
@@ -16,9 +16,9 @@ server {
 
     ssl_certificate ${PROXY_SSL_CERT};
     ssl_certificate_key ${PROXY_SSL_CERT_KEY};
-    ssl_ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS;
-    ssl_prefer_server_ciphers on;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers ${PROXY_SSL_CIPHERS};
+    ssl_prefer_server_ciphers ${PROXY_SSL_PREFER_CIPHERS};
+    ssl_protocols ${PROXY_SSL_PROTOCOLS};
     ssl_verify_client ${PROXY_SSL_VERIFY};
 
     location / {
