--- a/v2-apache/conf/extra/httpd-vhosts.conf
+++ b/v2-apache/conf/extra/httpd-vhosts.conf
@@ -33,12 +33,7 @@ UseCanonicalName on
     RewriteEngine On
     RewriteCond %{REQUEST_URI} !^/\.well\-known/acme\-challenge/
     RewriteCond %{ENV:APACHE_ALWAYS_TLS_REDIRECT} on
-    RewriteCond %{HTTP_HOST} ^(.*):${PORT}$ [NC]
-    RewriteRule ^(.*)$ https://%1:${SSL_PORT}$1 [L,R=301]
-
-    RewriteCond %{REQUEST_URI} !^/\.well\-known/acme\-challenge/
-    RewriteCond %{ENV:APACHE_ALWAYS_TLS_REDIRECT} on
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}:${SSL_PORT}$1 [L,R=301]
+    RewriteRule ^(.*)$ https://%{SERVER_NAME}:${SSL_PORT}$1 [L,R=301]
 </VirtualHost>
 
 <VirtualHost *:${SSL_PORT}>
