--- a/src/etc/modsecurity.d/modsecurity-override.conf
+++ b/src/etc/modsecurity.d/modsecurity-override.conf
@@ -13,6 +13,7 @@ SecCookieFormat 0
 SecDataDir ${MODSEC_DATA_DIR}
 SecDebugLog ${MODSEC_DEBUG_LOG}
 SecDebugLogLevel ${MODSEC_DEBUG_LOGLEVEL}
+SecDisableBackendCompression ${MODSEC_DISABLE_BACKEND_COMPRESSION}
 SecPcreMatchLimit ${MODSEC_PCRE_MATCH_LIMIT}
 SecPcreMatchLimitRecursion ${MODSEC_PCRE_MATCH_LIMIT_RECURSION}
 SecRequestBodyAccess ${MODSEC_REQ_BODY_ACCESS}
