--- a/v2-apache/Dockerfile
+++ b/v2-apache/Dockerfile
@@ -83,6 +83,7 @@ ENV APACHE_ALWAYS_TLS_REDIRECT=off \
     MODSEC_DEBUG_LOGLEVEL=0 \
     MODSEC_DEFAULT_PHASE1_ACTION="phase:1,pass,log,tag:'\${MODSEC_TAG}'" \
     MODSEC_DEFAULT_PHASE2_ACTION="phase:2,pass,log,tag:'\${MODSEC_TAG}'" \
+    MODSEC_DISABLE_BACKEND_COMPRESSION="Off" \
     MODSEC_PCRE_MATCH_LIMIT_RECURSION=500000 \
     MODSEC_PCRE_MATCH_LIMIT=500000 \
     MODSEC_REQ_BODY_ACCESS=on \
