--- a/v2-apache/conf/extra/httpd-modsecurity.conf
+++ b/v2-apache/conf/extra/httpd-modsecurity.conf
@@ -2,12 +2,12 @@ LoadModule security2_module /usr/local/apache2/modules/mod_security2.so
 
 Timeout ${TIMEOUT}
 
+LogFormat ${APACHE_LOGFORMAT} modsec
+
 LogLevel ${LOGLEVEL}
-ErrorLog ${ERRORLOG}
-CustomLog ${ACCESSLOG} "env=!nologging"
+
 CustomLog ${PERFLOG}
 CustomLog ${METRICSLOG} "env=!nologging"
-TransferLog /proc/self/fd/1
 
 <IfModule reqtimeout_module>
   RequestReadTimeout header=20-40,MinRate=500 body=20,MinRate=500
